--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1"
   }
 }
