--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "knex": "^2.2.0",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "pug": "^3.0.2",
     "socket.io": "^4.5.1"
   }
